# livelybot_rl_control

./: README.md  setup.py
humanoid/envs/: __init__.py
humanoid/envs/base/: legged_robot.py
humanoid/envs/pai/: pai_config.py  pai_env.py
humanoid/scripts/: play.py  sim2sim.py
humanoid/utils/: logger.py
resources/robots/pai_12dof/: CMakeLists.txt  package.xml
resources/robots/pai_12dof/config/: joint_names_pai_12dof_v2_0312.yaml
resources/robots/pai_12dof/launch/: display.launch  gazebo.launch
resources/robots/pai_12dof/meshes/: base_link.STL  l_ankle_pitch_link.STL  l_ankle_roll_link.STL  l_calf_link.STL  l_hip_roll_link.STL  l_hip_yaw_link.STL  l_thigh_link.STL  r_ankle_pitch_link.STL  r_ankle_roll_link.STL  r_calf_link.STL  r_hip_roll_link.STL  r_hip_yaw_link.STL  r_thigh_link.STL
resources/robots/pai_12dof/mjcf/: pai_12dof.xml  pai_12dof_terrain.xml
resources/robots/pai_12dof/urdf/: pai_12dof.urdf
